--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,7 @@
     <% if (bannerType === 'Weborama') { %><script type="text/javascript" src="//media.adrcdn.com/scripts/screenad_interface_1.0.3_scrambled.js"></script><% } %>
 
 </head>
-<body>
+<body class="${{ _lang_ }}$">
     <div id="banner">        
         <h1 id="title">Freakin Banners!</h1>
         <p id="caption">Get some</p>
@@ -30,11 +30,11 @@
 
     <% if (includeZepto == true) { %><script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.1.6/zepto.min.js"></script><% } %>
     <% if (includeZepto == false) { %><script src="//media.adrcdn.com/scripts/jquery.min.js"></script><% } %>
-    <script type="text/javascript" src="//code.createjs.com/preloadjs-0.6.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/CSSPlugin.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/easing/EasePack.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenLite.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/TimelineLite.min.js"></script>
+    <script src="https://s0.2mdn.net/ads/studio/cached_libs/preloadjs_0.6.2_d7b96570d4552592ae479162e546cb25_min.js"></script>
+    <script src="https://s0.2mdn.net/ads/studio/cached_libs/cssplugin_1.18.5_6bbddbd910e8bfac4e19220fe52e1af6_min.js"></script>
+    <script src="https://s0.2mdn.net/ads/studio/cached_libs/easepack_1.18.5_4405b7326844d606cf693d06af83ddfd_min.js"></script>
+    <script src="https://s0.2mdn.net/ads/studio/cached_libs/tweenlite_1.18.5_3bb7bb8f4b38ac71b33dad50f1b17f49_min.js"></script>
+    <% if (includeTimeline == true) { %><script src="https://s0.2mdn.net/ads/studio/cached_libs/timelinelite_1.18.5_2fb4c19072a581c3daede85bd891458e_min.js"></script><% } %>
     <% if (bannerType === 'Flashtalking') { %><script src="http://cdn.flashtalking.com/frameworks/js/api/2/9/html5API.js"></script><% } %>
 
     <script src="main.js"></script>
