--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="">
+<% if (useLocales) { %> <html lang="${{ _lang_ }}$"> <% } %>
+<% else { %> <html lang="es"> <% } %>
 <head>
     <% if (bannerType === 'Weborama') { %>
     <!-- ADRIME SCREENAD META DATA (don't edit/remove) -->
@@ -20,14 +21,15 @@
     <% if (bannerType === 'Weborama') { %><script type="text/javascript" src="//media.adrcdn.com/scripts/screenad_interface_1.0.3_scrambled.js"></script><% } %>
 
 </head>
-<body class="${{ _lang_ }}$">
+<% if (useLocales) { %> <body class="${{ _lang_ }}$"> <% } %>
+<% else { %> <body> <% } %>
     <div id="banner">        
         <h1 id="title">Freakin Banners!</h1>
         <p id="caption">Get some</p>
         <div id="border"></div>
         <div id="button-exit"></div>        
     </div>
-    
+
     <script src="https://s0.2mdn.net/ads/studio/cached_libs/preloadjs_0.6.2_d7b96570d4552592ae479162e546cb25_min.js"></script>
     <% if (bannerType === 'Flashtalking') { %><script src="http://cdn.flashtalking.com/frameworks/js/api/2/9/html5API.js"></script><% } %>
 
