--- a/app/templates/main.scss
+++ b/app/templates/main.scss
@@ -4,45 +4,44 @@ body {
     color: #555;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 #banner {
     background: #111;
-    position: absolute;
-    overflow: hidden;
+    @include absolute(50% 50%);
     width: $banner-width;
     height: $banner-height;
-    left: 50%;
-    top: 50%;
     margin-left: -$banner-width / 2;
     margin-top: -$banner-height / 2;
+    overflow: hidden;
 
     #button-exit {
+        @include absolute(0 0 0 0);
         cursor: pointer;
-        height: 100%;
-        left: 0px;
-        position: absolute;
-        top: 0px;
-        width: 100%;
     }
 
     #border {
         border: 1px solid #ccc;
         display: block;
+        @include absolute(0 0);
         width: $banner-width - 2;
         height: $banner-height - 2;
-        left: 0;
-        top: 0;
         pointer-events: none;
-        position: absolute;                
         z-index: 999;
     }
 
     #title {
+        @include absolute(50% 50%);
+        @include center;
         font-size: 40px;
         line-height: 1;
         letter-spacing: -1px;
         color: #ff0000;
-        text-align: center;
         opacity: 0;
+        margin: 0;
     }
 
     #caption {
